third_party/move/move-compiler-v2/tests/unit_test/test/expected_failure_on_non_function.exp

Diagnostics:
error: invalid attribute
  ┌─ tests/unit_test/test/expected_failure_on_non_function.move:3:7
  │
3 │     #[expected_failure]
  │       ^^^^^^^^^^^^^^^^
  │       │
  │       Attribute 'expected_failure' is not expected with a struct
  │       Expected to be used with one of the following: function

error: invalid attribute
  ┌─ tests/unit_test/test/expected_failure_on_non_function.move:6:7
  │
6 │     #[expected_failure]
  │       ^^^^^^^^^^^^^^^^
  │       │
  │       Attribute 'expected_failure' is not expected with a use
  │       Expected to be used with one of the following: function

error: invalid attribute
  ┌─ tests/unit_test/test/expected_failure_on_non_function.move:9:7
  │
9 │     #[expected_failure]
  │       ^^^^^^^^^^^^^^^^
  │       │
  │       Attribute 'expected_failure' is not expected with a constant
  │       Expected to be used with one of the following: function
